# libwz

./: .clang-format  .cpplint  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  binding.gyp  build.bat  build.sh  eslint.config.mjs  format.bat  format.sh  index.ts  lint.bat  lint.sh  package.json  tsconfig.eslint.json  tsconfig.json
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-06-19-wz-editing-implementation.md  2026-06-22-wasm-blob-data-source-implementation.md  2026-06-22-wasm-isomorphic-api-implementation.md
docs/superpowers/progress/: 2026-06-22-wasm-blob-data-source-progress.md
docs/superpowers/specs/: 2026-06-19-wz-editing-design.md  2026-06-22-wasm-blob-data-source-design.md  2026-06-22-wasm-isomorphic-api-design.md
include/wz/: CRC32.h  PngUtility.h  PortalType.h  Result.h  WzAESConstant.h  WzDirectory.h  WzEnums.h  WzFile.h  WzFileManager.h  WzHeader.h  WzImage.h  WzImageProperty.h  WzObject.h  WzPropertyCollection.h  wz.h  wz_api.h
include/wz/Properties/: WzBinaryProperty.h  WzCanvasProperty.h  WzConvexProperty.h  WzDoubleProperty.h  WzFloatProperty.h  WzIntProperty.h  WzLongProperty.h  WzLuaProperty.h  WzNullProperty.h  WzPngProperty.h  WzRawDataProperty.h  WzShortProperty.h  WzStringProperty.h  WzSubProperty.h  WzUOLProperty.h  WzVectorProperty.h  WzVideoProperty.h
include/wz/Util/: Defines.h  ListFileParser.h  WzBinaryReader.h  WzBinaryWriter.h  WzBlobDataSource.h  WzDataSource.h  WzKeyGenerator.h  WzMutableKey.h  WzPath.h  WzStream.h  WzTool.h
java/: pom.xml
java/src/main/java/com/toyobayashi/libwz/: NativeLibraryLoader.java  WzBinaryProperty.java  WzCanvasProperty.java  WzConvexProperty.java  WzDirectory.java  WzDoubleProperty.java  WzEnums.java  WzFile.java  WzFileManager.java  WzFloatProperty.java  WzImage.java  WzImageProperty.java  WzIntProperty.java  WzLongProperty.java  WzLuaProperty.java  WzNullProperty.java  WzObject.java  WzObjectFactory.java  WzPngProperty.java  WzPropertyCollection.java  WzPropertyFactory.java  WzRawDataProperty.java  WzShortProperty.java  WzStringProperty.java  WzSubProperty.java  WzTool.java  WzUOLProperty.java  WzVectorProperty.java  WzVideoProperty.java
java/src/main/java/io/github/toyobayashi/libwz/: NativeLibraryLoader.java  WzBinaryProperty.java  WzCanvasProperty.java  WzConvexProperty.java  WzDirectory.java  WzDoubleProperty.java  WzEnums.java  WzFile.java  WzFileManager.java  WzFloatProperty.java  WzImage.java  WzImageProperty.java  WzIntProperty.java  WzLongProperty.java  WzLuaProperty.java  WzNullProperty.java  WzObject.java  WzObjectFactory.java  WzPngProperty.java  WzPropertyCollection.java  WzPropertyFactory.java  WzRawDataProperty.java  WzShortProperty.java  WzStringProperty.java  WzSubProperty.java  WzTool.java  WzUOLProperty.java  WzVectorProperty.java  WzVideoProperty.java
java/src/main/resources/native/: PLACE_NATIVE_LIBS_HERE.txt
java/src/test/java/com/toyobayashi/libwz/: Playground.java  UnitTest1.java
java/src/test/java/io/github/toyobayashi/libwz/: EditingTest.java  Playground.java  UnitTest1.java
js/: binding-state.ts  index.ts  native-binding.ts  native-loader.ts  node-wrapper.ts
js/wasm/: loader.ts  runtime.ts
scripts/: build-ts.mjs
src/: PngUtility.cpp  WzAESConstant.cpp  WzDirectory.cpp  WzEnums.cpp  WzFile.cpp  WzFileManager.cpp  WzFileManager.h  WzImage.cpp  WzImageProperty.cpp  WzObject.cpp  WzPropertyCollection.cpp  native-binding.d.ts  native-binding.ts  node-wrapper.d.ts  node-wrapper.ts
src/Properties/: WzBinaryProperty.cpp  WzCanvasProperty.cpp  WzConvexProperty.cpp  WzDoubleProperty.cpp  WzFloatProperty.cpp  WzIntProperty.cpp  WzLongProperty.cpp  WzLuaProperty.cpp  WzNullProperty.cpp  WzPngProperty.cpp  WzRawDataProperty.cpp  WzShortProperty.cpp  WzStringProperty.cpp  WzSubProperty.cpp  WzUOLProperty.cpp  WzVectorProperty.cpp  WzVideoProperty.cpp
src/Util/: ListFileParser.cpp  WzBinaryReader.cpp  WzBinaryWriter.cpp  WzBlobDataSource.cpp  WzDataSource.cpp  WzKeyGenerator.cpp  WzMutableKey.cpp  WzStream.cpp  WzTool.cpp
src/capi/: wz_api.cpp  wz_api_compat.hpp
src/jni/: wz_jni.cpp
src/node/: binding.cpp
tests/: Custom.wz  TestCapiError.cpp  TestEditing.cpp  TestMapleLib.cpp  TestPngUtility.cpp  TestPortalType.cpp  TestPropertyWriteValue.cpp  TestRepack.cpp  TestResult.cpp  TestStreams.h  TestUnitTest1.cpp  TestWzBinaryWriter.cpp  TestWzBlobDataSource.cpp  TestWzDataSource.cpp  main.cpp  smoke.test.js  smoke.test.mjs
tests/wasm/: browser-main.test.mjs  direct-worker.mjs  direct.test.mjs  esm-import.test.mjs  index.html  parity.test.mjs  tsconfig.json  worker-rpc.test.mjs
tests/wasm/src/: main.tsx  messages.ts  style.css  worker.ts
tests/wasm/vite/: package.json  vite.config.ts
tests/wasm/webpack/: index.html  package.json  webpack.config.mjs
tests/wasm/webpack/src/: index.mjs
wasm/: browser-index.ts  browser-loader.ts  browser-main.ts  browser.ts  direct-api.ts  index.ts  libwz-browser.d.ts  libwz-sync.d.ts  libwz.d.ts  loader.ts  native-binding.d.ts  node-wrapper.d.ts  rpc.ts  sync-loader.ts  tsconfig.json  worker.ts
